tests/parser/tests/cases/should_fail/unknown_escape_sequence/case.stderr
error: invalid character escape sequence. unknown escape sequence `j`
 --> $DIR/case.hash:1:8
1 |   k := '\j';
  |          ^ here
